Fix overflow on small screens

--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -72,7 +72,7 @@
     }
 
     .video-list {
-        width: auto !important;
+        width: 100% !important;
         margin-top: 20px !important;
         padding-left: 0px !important;
     }
